--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h1 {
 	font-size: 90px;
 }
 h2 {
-	font-size:80px;
+	font-size:40px;
 }
 h3 {
 	font-size:65px;
@@ -146,16 +146,14 @@ h3 {
 h4, summary {
 	font-size:55px;
 }
-h5 {
-	font-size:45px;
-}
+
 h6 {
 	font-size:35px;
 }
 p {
-	font-family: Constantia;
+	font-family: PTSans;
 	font-size: 14px;
-	line-height:1.5em;
+	line-height:1.3em;
 	margin-bottom:20px !important;
 	margin-top:0px !important;
 	word-spacing: 0.2em;
@@ -783,15 +781,13 @@ ul#navigation li span {
 }
 .resume-info h2
 {
-    margin-bottom:30px !important;
+    /*margin-bottom:30px !important;*/
 }
 #resume .first
 {
 	font-family: PTSansBold;
-	font-weight:bold;
-	font-size:24px;
-	line-height:36px;
-    padding-bottom: 40px !important;
+	font-size:12px;
+    padding-bottom: 25px !important;
     margin-bottom:10px !important;
     border-bottom-style:solid;
     border-bottom-width: 1px;
